--- a/2- northwind-app/src/app/navbar/navbar.component.html
+++ b/2- northwind-app/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Northwind App</a>
+    <a class="navbar-brand" routerLink="/">Northwind App</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,25 +15,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" routerLink="/products" routerLinkActive="active"
+            >Products</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Categories</a>
+          <a class="nav-link" routerLink="/categories" routerLinkActive="active">Categories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Employees</a>
+          <a class="nav-link" routerLink="/employees" routerLinkActive="active">Employees</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
+          <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
         </li>
       </ul>
     </div>
