--- a/2- northwind-app/src/app/home/home.component.html
+++ b/2- northwind-app/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="card mb-3 mt-5">
+  <div class="row">
+    <div class="col-2">
+      <img
+        class="card-img-top"
+        src="../../assets/1.jpg"
+        alt="Card image cap"
+        style="width: 120px;height:150px; border-radius: 50%; margin:20px"
+      />
+    </div>
+    <div class="col-10">
+      <div class="card-body mt-3">
+        <h5 class="card-title">Berkan Ankal</h5>
+        <p class="card-text">
+          A passionate, dynamic and detail-oriented developer who loves
+          challenges and sees them as opportunities for self-improvement, loves
+          research and reading, constantly improves himself in line with his
+          goals and is dedicated to providing user-friendly solutions.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
