--- a/2- northwind-app/src/app/contact/contact.component.html
+++ b/2- northwind-app/src/app/contact/contact.component.html
@@ -1,1 +1,15 @@
-<p>contact works!</p>
+<div class="row" style="height:540px">
+  <div class="col-3 mb-4" *ngFor="let contact of contacts; let i = index">
+    <div class="card" style="width: 18rem">
+      <div class="card-body">
+        <div class="card-text">Name: {{ contact.name }}</div>
+        <div class="card-text">Message: {{ contact.message }}</div>
+        <div class="card-text">Mail: {{ contact.email }}</div>
+        <div class="card-text mb-3">Phone: {{ contact.phone }}</div>
+        <button class="btn btn-primary">Detay</button>
+        <button class="btn btn-success mx-2">Güncelle</button>
+        <button class="btn btn-danger">Sil</button>
+      </div>
+    </div>
+  </div>
+</div>
