--- a/2- northwind-app/src/app/home/home.component.html
+++ b/2- northwind-app/src/app/home/home.component.html
@@ -1,3 +1,51 @@
+<div
+  id="carouselExampleControls"
+  class="carousel slide"
+  data-bs-ride="carousel"
+>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        src="https://www.w3schools.com/howto/img_snow_wide.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://www.w3schools.com/howto/img_lights_wide.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://www.w3schools.com/howto/img_mountains_wide.jpg"
+        class="d-block w-100"
+        alt="..."
+      />
+    </div>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleControls"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleControls"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 <div class="card mb-3 mt-5">
   <div class="row">
     <div class="col-2">
@@ -5,7 +53,7 @@
         class="card-img-top"
         src="../../assets/1.jpg"
         alt="Card image cap"
-        style="width: 120px;height:150px; border-radius: 50%; margin:20px"
+        style="width: 120px; height: 150px; border-radius: 50%; margin: 20px"
       />
     </div>
     <div class="col-10">
