--- a/2- northwind-app/src/app/products/products.component.html
+++ b/2- northwind-app/src/app/products/products.component.html
@@ -1,1 +1,20 @@
-<p>products works!</p>
+<div class="row">
+  <div class="col-3 mb-4" *ngFor="let product of products; let i = index">
+    <div class="card" style="width: 18rem">
+      <img
+        class="card-img-top"
+        height="200"
+        src="http://localhost:3030/api/products/images/{{ product.imageName }}"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <h5 class="card-title">{{ product.name }}</h5>
+        <div class="card-text">Price: {{ product.price }}</div>
+        <div class="card-text mb-3">Stock: {{ product.stock }}</div>
+        <button class="btn btn-primary">Detay</button>
+        <button class="btn btn-success mx-2">Güncelle</button>
+        <button class="btn btn-danger">Sil</button>
+      </div>
+    </div>
+  </div>
+</div>
