--- a/2- northwind-app/src/app/products/products.component.html
+++ b/2- northwind-app/src/app/products/products.component.html
@@ -2,6 +2,7 @@
   class="btn btn-primary mb-4"
   data-bs-toggle="modal"
   data-bs-target="#exampleModal"
+  (click)="clickAddEmployee()"
 >
   Add Product
 </button>
@@ -17,7 +18,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add Product</h5>
+        <h5 *ngIf="showAdd" class="modal-title" id="exampleModalLabel">
+          Add Product
+        </h5>
+        <h5 *ngIf="showUpdate" class="modal-title" id="exampleModalLabel">
+          Update Product
+        </h5>
         <button
           type="button"
           class="btn-close"
@@ -61,11 +67,29 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" id="cancel" data-bs-dismiss="modal">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          id="cancel"
+          data-bs-dismiss="modal"
+        >
           Close
         </button>
-        <button type="button" class="btn btn-primary" (click)="addProduct()">
+        <button
+          *ngIf="showAdd"
+          type="button"
+          class="btn btn-primary"
+          (click)="addProduct()"
+        >
           Add
+        </button>
+        <button
+          *ngIf="showUpdate"
+          type="button"
+          class="btn btn-success"
+          (click)="updateProduct()"
+        >
+          Update
         </button>
       </div>
     </div>
@@ -90,7 +114,14 @@
           routerLinkActive="router-link-active"
           ><button class="btn btn-primary">Detay</button></a
         >
-        <button class="btn btn-success mx-2">Güncelle</button>
+        <button
+          class="btn btn-success mx-2"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+          (click)="onEdit(product)"
+        >
+          Güncelle
+        </button>
         <button class="btn btn-danger" (click)="deleteProduct(product.id)">
           Sil
         </button>
