--- a/2- northwind-app/src/app/login/login.component.html
+++ b/2- northwind-app/src/app/login/login.component.html
@@ -10,37 +10,43 @@
                   Sign in
                 </p>
 
-                <form class="mx-1 mx-md-4">
+                <form
+                  class="mx-1 mx-md-4"
+                  [formGroup]="myForm"
+                  (submit)="submit()"
+                >
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
+                      <label class="form-label" for="form3Example1c"
+                        >Username</label
+                      >
                       <input
+                        formControlName="username"
                         type="text"
                         id="form3Example1c"
                         class="form-control"
                       />
-                      <label class="form-label" for="form3Example1c"
-                        >Username</label
-                      >
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
+                      <label class="form-label" for="form3Example4c"
+                        >Password</label
+                      >
                       <input
+                        formControlName="password"
                         type="password"
                         id="form3Example4c"
                         class="form-control"
                       />
-                      <label class="form-label" for="form3Example4c"
-                        >Password</label
-                      >
                     </div>
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">
+                    <button type="submit" class="btn btn-primary btn-lg">
                       Login
                     </button>
                   </div>
