--- a/2- northwind-app/src/app/register/register.component.html
+++ b/2- northwind-app/src/app/register/register.component.html
@@ -10,78 +10,73 @@
                   Sign up
                 </p>
 
-                <form class="mx-1 mx-md-4">
+                <form
+                  class="mx-1 mx-md-4"
+                  [formGroup]="myForm"
+                  (submit)="submit()"
+                >
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
+                      <label class="form-label" for="form3Example1c"
+                        >Firstname</label
+                      >
                       <input
+                        formControlName="firstName"
                         type="text"
                         id="form3Example1c"
                         class="form-control"
                       />
-                      <label class="form-label" for="form3Example1c"
-                        >Firstname</label
-                      >
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input
-                        type="text"
-                        id="form3Example3c"
-                        class="form-control"
-                      />
                       <label class="form-label" for="form3Example3c"
                         >Lastname</label
                       >
+                      <input
+                        formControlName="lastName"
+                        type="text"
+                        id="form3Example3c"
+                        class="form-control"
+                      />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input
-                        type="text"
-                        id="form3Example3c"
-                        class="form-control"
-                      />
-                      <label class="form-label" for="form3Example3c"
+                      <label class="form-label" for="form4Example4c"
                         >Username</label
                       >
+                      <input
+                        formControlName="username"
+                        type="text"
+                        id="form4Example4c"
+                        class="form-control"
+                      />
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input
-                        type="password"
-                        id="form3Example4c"
-                        class="form-control"
-                      />
-                      <label class="form-label" for="form3Example4c"
+                      <label class="form-label" for="form5Example5c"
                         >Password</label
                       >
+                      <input
+                        formControlName="password"
+                        type="password"
+                        id="form5Example5c"
+                        class="form-control"
+                      />
                     </div>
                   </div>
 
-                  <div class="form-check d-flex justify-content-center mb-5">
-                    <input
-                      class="form-check-input me-2"
-                      type="checkbox"
-                      value=""
-                      id="form2Example3c"
-                    />
-                    <label class="form-check-label" for="form2Example3">
-                      I agree all statements in
-                      <a href="#!">Terms of service</a>
-                    </label>
-                  </div>
-
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">
+                    <button type="submit" class="btn btn-primary btn-lg">
                       Register
                     </button>
                   </div>
