--- a/2- northwind-app/src/app/categories/categories.component.html
+++ b/2- northwind-app/src/app/categories/categories.component.html
@@ -95,7 +95,9 @@
         >
           Güncelle
         </button>
-        <button class="btn btn-danger">Sil</button>
+        <button class="btn btn-danger" (click)="deleteCategory(category.id)">
+          Sil
+        </button>
       </div>
     </div>
   </div>
