--- a/2- northwind-app/src/app/employees/employees.component.html
+++ b/2- northwind-app/src/app/employees/employees.component.html
@@ -2,6 +2,7 @@
   class="btn btn-primary mb-4"
   data-bs-toggle="modal"
   data-bs-target="#exampleModal"
+  (click)="clickAddEmployee()"
 >
   Add Employee
 </button>
@@ -17,7 +18,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add Product</h5>
+        <h5 class="modal-title" id="exampleModalLabel" *ngIf="showAdd">
+          Add Product
+        </h5>
+        <h5 class="modal-title" id="exampleModalLabel" *ngIf="showUpdate">
+          Update Product
+        </h5>
         <button
           type="button"
           class="btn-close"
@@ -92,8 +98,20 @@
         >
           Close
         </button>
-        <button type="button" class="btn btn-primary" (click)="addEmployee()">
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="addEmployee()"
+          *ngIf="showAdd"
+        >
           Add
+        </button>
+        <button
+          class="btn btn-success"
+          (click)="updateEmployee()"
+          *ngIf="showUpdate"
+        >
+          Update
         </button>
       </div>
     </div>
@@ -121,7 +139,14 @@
         <a [routerLink]="['/employees', employee.id]"
           ><button class="btn btn-primary">Detay</button></a
         >
-        <button class="btn btn-success mx-2">Güncelle</button>
+        <button
+          class="btn btn-success mx-2"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+          (click)="onEdit(employee)"
+        >
+          Güncelle
+        </button>
         <button class="btn btn-danger" (click)="deleteEmployee(employee.id)">
           Sil
         </button>
