--- a/2- northwind-app/src/app/navbar/navbar.component.html
+++ b/2- northwind-app/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             >Products</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="authenticated">
           <a class="nav-link" routerLink="/categories" routerLinkActive="active"
             >Categories</a
           >
