--- a/2- northwind-app/src/app/navbar/navbar.component.html
+++ b/2- northwind-app/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
             >Home</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="authenticated">
           <a class="nav-link" routerLink="/products" routerLinkActive="active"
             >Products</a
           >
@@ -29,12 +29,12 @@
             >Categories</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="authenticated">
           <a class="nav-link" routerLink="/employees" routerLinkActive="active"
             >Employees</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="authenticated">
           <a class="nav-link" routerLink="/contact" routerLinkActive="active"
             >Contact</a
           >
