--- a/2- northwind-app/src/app/register/register.component.html
+++ b/2- northwind-app/src/app/register/register.component.html
@@ -27,6 +27,16 @@
                         id="form3Example1c"
                         class="form-control"
                       />
+                      <div
+                        id="emailHelp"
+                        class="form-text"
+                        style="color: red"
+                        *ngIf="
+                          firstName && firstName.invalid && firstName.touched
+                        "
+                      >
+                        Firstname is required.
+                      </div>
                     </div>
                   </div>
 
@@ -42,6 +52,14 @@
                         id="form3Example3c"
                         class="form-control"
                       />
+                      <div
+                        id="emailHelp"
+                        class="form-text"
+                        style="color: red"
+                        *ngIf="lastName && lastName.invalid && lastName.touched"
+                      >
+                        Lastname is required.
+                      </div>
                     </div>
                   </div>
 
@@ -57,6 +75,14 @@
                         id="form4Example4c"
                         class="form-control"
                       />
+                      <div
+                        id="emailHelp"
+                        class="form-text"
+                        style="color: red"
+                        *ngIf="username && username.invalid && username.touched"
+                      >
+                        Username is required.
+                      </div>
                     </div>
                   </div>
 
@@ -72,11 +98,23 @@
                         id="form5Example5c"
                         class="form-control"
                       />
+                      <div
+                        id="emailHelp"
+                        class="form-text"
+                        style="color: red"
+                        *ngIf="password && password.invalid && password.touched"
+                      >
+                        Password is required.
+                      </div>
                     </div>
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="submit" class="btn btn-primary btn-lg">
+                    <button
+                      type="submit"
+                      class="btn btn-primary btn-lg"
+                      [disabled]="myForm.invalid"
+                    >
                       Register
                     </button>
                   </div>
