--- a/2- northwind-app/src/app/navbar/navbar.component.html
+++ b/2- northwind-app/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Northwind App</a>
+    <a class="navbar-brand" routerLink="/home">Northwind App</a>
     <button
       class="navbar-toggler"
       type="button"
