--- a/2- northwind-app/src/app/categories/categories.component.html
+++ b/2- northwind-app/src/app/categories/categories.component.html
@@ -88,7 +88,7 @@
 </div>
 
 <div class="row">
-  <div class="col-3 mb-4" *ngFor="let category of categories; let i = index">
+  <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-4" *ngFor="let category of categories; let i = index">
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
